--- a/ui/src/index.html
+++ b/ui/src/index.html
@@ -28,8 +28,7 @@
   <script src="vendor/reflect-metadata/Reflect.js"></script>
   <script src="vendor/systemjs/dist/system.src.js"></script>
   <script src="vendor/zone.js/dist/zone.js"></script>
-
-  <script src="https://cdn.rawgit.com/jackmoore/autosize/master/dist/autosize.min.js"></script>
+  <script src="vendor/autosize/dist/autosize.min.js"></script>
   <script>
     System.import('system-config.js').then(function () {
       System.import('main');
