--- a/ui/src/index.html
+++ b/ui/src/index.html
@@ -7,7 +7,7 @@
   {{content-for 'head'}}
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" href="app/vendor.css">
+  <link rel="stylesheet" type="text/css" href="app/styles/vendor.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
   <!-- Service worker support is disabled by default.
        Install the worker script and uncomment to enable.
