Refactoring into flowchat

--- a/ui/src/index.html
+++ b/ui/src/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>ChatPracticeUi</title>
+  <title>FlowChat</title>
   <base href="/">
   {{content-for 'head'}}
   <link rel="icon" type="image/x-icon" href="favicon.ico">
@@ -23,7 +23,7 @@
   -->
 </head>
 <body>
-  <chat-practice-ui-app>Loading...</chat-practice-ui-app>
+  <flowchat-app>Loading...</flowchat-app>
 
   <script src="vendor/es6-shim/es6-shim.js"></script>
   <script src="vendor/reflect-metadata/Reflect.js"></script>
