Referring to autosize by CDN now

--- a/ui/src/index.html
+++ b/ui/src/index.html
@@ -29,7 +29,8 @@
   <script src="vendor/reflect-metadata/Reflect.js"></script>
   <script src="vendor/systemjs/dist/system.src.js"></script>
   <script src="vendor/zone.js/dist/zone.js"></script>
-  <script src="vendor/autosize/dist/autosize.min.js"></script>
+  <!-- <script src="vendor/autosize.min.js"></script> -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/autosize.js/3.0.15/autosize.min.js"></script>
   <script>
     System.import('system-config.js').then(function () {
       System.import('main');
