Favico changing now working

--- a/ui/src/index.html
+++ b/ui/src/index.html
@@ -31,6 +31,7 @@
   <script src="vendor/zone.js/dist/zone.js"></script>
   <!-- <script src="vendor/autosize.min.js"></script> -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/autosize.js/3.0.15/autosize.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/favico.js/0.3.10/favico.min.js"></script>
   <script>
     System.import('system-config.js').then(function () {
       System.import('main');
