--- a/ui/src/index.html
+++ b/ui/src/index.html
@@ -10,6 +10,8 @@
   {{/unless}}
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" type="text/css" href="app/styles/vendor.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
 </head>
 <body>
   <app-root>Loading...</app-root>
@@ -24,6 +26,8 @@
         System.import('main');
       }).catch(console.error.bind(console));
     </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/autosize.js/3.0.15/autosize.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/favico.js/0.3.10/favico.min.js"></script>
 
   
 
