Update markdown-it-emoji to use cdnjs

--- a/ui/src/index.html
+++ b/ui/src/index.html
@@ -28,7 +28,7 @@
     </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/autosize.js/3.0.15/autosize.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/favico.js/0.3.10/favico.min.js"></script>
-    <script src="https://cdn.rawgit.com/markdown-it/markdown-it-emoji/master/dist/markdown-it-emoji.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/markdown-it-emoji/1.2.0/markdown-it-emoji.min.js"></script>
 
 </body>
 </html>
