Fixing tooltip, dropdown and tag issues.

--- a/ui/src/index.html
+++ b/ui/src/index.html
@@ -14,5 +14,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/favico.js/0.3.10/favico.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/markdown-it/7.0.1/markdown-it.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/markdown-it-emoji/1.2.0/markdown-it-emoji.min.js"></script>
+    <script>window.__theme = 'bs4';</script>
 </body>
 </html>
