--- a/ui/src/index.html
+++ b/ui/src/index.html
@@ -10,5 +10,6 @@
 <body>
   <app-root>Loading...</app-root>
     <script>window.__theme = 'bs4';</script>
+    <script src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.min.js"></script>
 </body>
 </html>
